# flask-sample

./: .gitignore  .secrets-exemple.yaml  LICENSE  pyproject.toml  settings.yaml
migrations/versions/: 64e28b6d9670_first.py
static/css/: base.css
templates/: base.html
templates/admin/post/: create.html  edit.html
templates/blog/: about.html  albums.html  home.html  post-detail.html  posts.html
tocadobilbo/: app.py
tocadobilbo/blueprints/blog/: __init__.py  views.py
tocadobilbo/controllers/post/: __init__.py
tocadobilbo/controllers/postthumbnail/: __init__.py
tocadobilbo/controllers/user/: __init__.py
tocadobilbo/extensions/admin/: __init__.py  forms.py  views.py
tocadobilbo/extensions/configurations/: __init__.py
tocadobilbo/extensions/database/: __init__.py  models.py
tocadobilbo/extensions/migrations/: __init__.py
tocadobilbo/extensions/pagedown/: __init__.py
